[gd_scene load_steps=11 format=3 uid="uid://dpgq745lcc7l3"]

[ext_resource type="Script" uid="uid://vf7a4w1qmwee" path="res://Code/UI/CharacterSelection/character_selection.gd" id="1_3b0r5"]
[ext_resource type="Resource" uid="uid://d2757723mme08" path="res://Data/Characters/characters.tres" id="2_qbs2l"]
[ext_resource type="Texture2D" uid="uid://2iyh8lwbhwin" path="res://Textures/Ui/CharacterSelection/temp_diff_btn_easy.png" id="3_vfrp3"]
[ext_resource type="Texture2D" uid="uid://dmnnnqys2os5c" path="res://Textures/Ui/CharacterSelection/temp_diff_btn_easy_selected.png" id="4_gu4rk"]
[ext_resource type="Texture2D" uid="uid://drxlnoj8aa6dx" path="res://Textures/Ui/CharacterSelection/temp_diff_btn_normal.png" id="5_gul1m"]
[ext_resource type="Texture2D" uid="uid://bh6nyjlsvbgbr" path="res://Textures/Ui/CharacterSelection/temp_diff_btn_normal_selected.png" id="6_gu4rk"]
[ext_resource type="Texture2D" uid="uid://crvlt6edb0cjr" path="res://Textures/Ui/CharacterSelection/temp_diff_btn_hard_selected.png" id="6_wcq0f"]
[ext_resource type="Texture2D" uid="uid://bypf8re5m2rch" path="res://Textures/Ui/CharacterSelection/temp_diff_btn_hard.png" id="7_w660q"]
[ext_resource type="Texture2D" uid="uid://c8ga6j4rqkdp5" path="res://Textures/Ui/CharacterSelection/temp_diff_btn_extreme.png" id="8_y0nwi"]
[ext_resource type="Texture2D" uid="uid://dbo8ga50sid55" path="res://Textures/Ui/CharacterSelection/temp_diff_btn_extreme_selected.png" id="9_dmto0"]

[node name="CharacterSelection" type="Node2D"]

[node name="character_selection" type="Control" parent="."]
custom_minimum_size = Vector2(640, 360)
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_3b0r5")
character_list = ExtResource("2_qbs2l")
start_destination = &"test_level"

[node name="HBoxContainer" type="HBoxContainer" parent="character_selection"]
custom_minimum_size = Vector2(310, 170)
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 315.0
offset_bottom = 175.0
theme_override_constants/separation = 0

[node name="character_panel" type="PanelContainer" parent="character_selection/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="character_selection/HBoxContainer/character_panel"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="character_buttons_hbox" type="HBoxContainer" parent="character_selection/HBoxContainer/character_panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="character_details" type="HBoxContainer" parent="character_selection/HBoxContainer/character_panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="large_character_image" type="TextureRect" parent="character_selection/HBoxContainer/character_panel/VBoxContainer/character_details"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_vertical = 0
expand_mode = 3
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="character_selection/HBoxContainer/character_panel/VBoxContainer/character_details"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="character_name_label" type="Label" parent="character_selection/HBoxContainer/character_panel/VBoxContainer/character_details/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "character name here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="character_detail_rtl" type="RichTextLabel" parent="character_selection/HBoxContainer/character_panel/VBoxContainer/character_details/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 6
bbcode_enabled = true
text = "character description goes here"

[node name="spacer" type="Control" parent="character_selection/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="character_selection/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="difficulty_setting" type="VBoxContainer" parent="character_selection/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 37)
layout_mode = 2

[node name="diff_label" type="Label" parent="character_selection/HBoxContainer/VBoxContainer/difficulty_setting"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Difficulty"
horizontal_alignment = 1
vertical_alignment = 1

[node name="difficulty_hb" type="HBoxContainer" parent="character_selection/HBoxContainer/VBoxContainer/difficulty_setting"]
layout_mode = 2
size_flags_horizontal = 4

[node name="btn_difficulty_0" type="TextureButton" parent="character_selection/HBoxContainer/VBoxContainer/difficulty_setting/difficulty_hb"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("3_vfrp3")
texture_pressed = ExtResource("4_gu4rk")
texture_focused = ExtResource("4_gu4rk")
metadata/difficulty = 0

[node name="btn_difficulty_1" type="TextureButton" parent="character_selection/HBoxContainer/VBoxContainer/difficulty_setting/difficulty_hb"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_gul1m")
texture_pressed = ExtResource("6_gu4rk")
texture_focused = ExtResource("6_gu4rk")
metadata/difficulty = 1

[node name="btn_difficulty_2" type="TextureButton" parent="character_selection/HBoxContainer/VBoxContainer/difficulty_setting/difficulty_hb"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("7_w660q")
texture_pressed = ExtResource("6_wcq0f")
texture_focused = ExtResource("6_wcq0f")
metadata/difficulty = 2

[node name="btn_difficulty_3" type="TextureButton" parent="character_selection/HBoxContainer/VBoxContainer/difficulty_setting/difficulty_hb"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("8_y0nwi")
texture_pressed = ExtResource("9_dmto0")
texture_focused = ExtResource("9_dmto0")
metadata/difficulty = 3

[node name="debug" type="PanelContainer" parent="character_selection/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="character_selection/HBoxContainer/VBoxContainer/debug"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="character_selection/HBoxContainer/VBoxContainer/debug/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Debug Selection"
horizontal_alignment = 1
vertical_alignment = 1

[node name="debug_level" type="OptionButton" parent="character_selection/HBoxContainer/VBoxContainer/debug/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 6
selected = 0
fit_to_longest_item = false
allow_reselect = true
item_count = 6
popup/item_0/text = "Select Level"
popup/item_0/id = 4
popup/item_1/text = "level_1"
popup/item_1/id = 0
popup/item_2/text = "level_2"
popup/item_2/id = 1
popup/item_3/text = "level_3"
popup/item_3/id = 2
popup/item_4/text = "level_4"
popup/item_4/id = 3
popup/item_5/text = "test_level"
popup/item_5/id = 5

[node name="debug_option" type="OptionButton" parent="character_selection/HBoxContainer/VBoxContainer/debug/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 6
selected = 0
item_count = 7
popup/item_0/text = "Select Objective"
popup/item_0/id = 0
popup/item_1/text = "destroy_mcguffin"
popup/item_1/id = 1
popup/item_2/text = "enemy_kills"
popup/item_2/id = 2
popup/item_3/text = "objective_hunt"
popup/item_3/id = 3
popup/item_4/text = "kill_elites"
popup/item_4/id = 4
popup/item_5/text = "key_hunt"
popup/item_5/id = 5
popup/item_6/text = "simon_says"
popup/item_6/id = 6

[node name="spacer" type="Control" parent="character_selection/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="btn_start" type="Button" parent="character_selection/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"
